--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-anyio              4.10.0
-certifi            2025.8.3
-charset-normalizer 3.4.3
-click              8.2.1
-colorama           0.4.6
-fastapi            0.95.2
-greenlet           3.2.4
-h11                0.16.0
-httptools          0.6.4
-idna               3.10
-joblib             1.5.2
-numpy              2.3.3
-passlib            1.7.4
-pip                25.2
-pydantic           1.10.23
-python-dotenv      1.1.1
-PyYAML             6.0.2
-requests           2.32.5
-scikit-learn       1.7.2
-scipy              1.16.2
-setuptools         65.5.0
-sniffio            1.3.1
-SQLAlchemy         2.0.43
-sqlmodel           0.0.24
-starlette          0.27.0
-threadpoolctl      3.6.0
-typing_extensions  4.15.0
-urllib3            2.5.0
-uvicorn            0.35.0
-watchfiles         1.1.0
-websockets         15.0.1
-xgboost            3.0.5
+anyio==4.10.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+fastapi==0.95.2
+greenlet==3.2.4
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+joblib==1.5.2
+numpy==2.3.3
+passlib==1.7.4
+pip==25.2
+pydantic==1.10.23
+python-dotenv==1.1.1
+PyYAML==6.0.2
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.2
+setuptools==65.5.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+sqlmodel==0.0.24
+starlette==0.27.0
+threadpoolctl==3.6.0
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
+xgboost==3.0.5
